# sd-ticketmaster-backend-mvp

./: .env.example  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_search_index.py  003_fix_booking_seats_pk.py
docs/: mvp-scope.md  system-design.md
src/ticketmaster/: __init__.py  config.py  database.py  main.py  redis.py  seed.py
src/ticketmaster/models/: __init__.py  base.py  booking.py  event.py  reservation.py  seat.py
src/ticketmaster/routers/: __init__.py  bookings.py  events.py  reservations.py  search.py
src/ticketmaster/schemas/: __init__.py  booking.py  event.py  reservation.py  seat.py
src/ticketmaster/services/: __init__.py  booking_service.py  event_service.py  reservation_service.py
tests/: test_health.py
tests/functional/: test_endpoints.py
tests/unit/: test_config.py  test_event_service.py  test_services.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_browse_events.py  test_fr2_view_seat_map.py  test_fr3_search_events.py  test_fr4_reserve_seats.py  test_fr5_confirm_reservation.py  test_fr6_get_booking.py  test_fr7_release_expired_holds.py  test_fr8_idempotent_reservation.py
