[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketmaster"
version = "0.1.0"
description = "Ticketmaster MVP — event ticketing REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "redis>=5.0,<6.0",
    "pydantic-settings>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.19,<1.0",
]

[project.scripts]
ticketmaster = "ticketmaster.main:main"

[project.urls]
Repository = "https://github.com/iliazlobin/sd-ticketmaster-backend-mvp"

[tool.hatch.build.targets.wheel]
packages = ["src/ticketmaster"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]
per-file-ignores = { "verify/acceptance/*" = ["E501", "F841"] }
